--- a/docs/ProblemStatementAndGoals/ProblemStatement.tex
+++ b/docs/ProblemStatementAndGoals/ProblemStatement.tex
@@ -46,6 +46,8 @@ Our team at OKKM Insights aims to solve this problem by creating an online platf
 Using an AI-powered crowd-sourcing model, our platform will allow users to label commercially available satellite images, helping us to build datasets. These datasets will then 
 be used to train custom computer vision models for various use cases. At its core, the platform will offer a paid service for identifying objects within satellite images, 
 and in turn, distribute the earnings to the users who contribute to the labeling effort.
+
+\newpage{}
 \subsection{Inputs and Outputs}
 
 % \wss{Characterize the problem in terms of ``high level'' inputs and outputs.  
